# micromanager-gui

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  phenix_to_useq.py  pyproject.toml  test_burst_plots.py  test_spike_correlation.py  wip.ipynb  wip.ipynb.ipynb  wip_batch_analysis.py  x.ipynb  x.py  y.ipynb
.github/workflows/: ci.yml
cellpose_models/: cp_training.py
examples/: gui.py  gui_napari.py  internal_tensorstore_mda.py  plate_viewer.py
models/: load_model.py
src/micromanager_gui/: __init__.py  __main__.py  _batch_segmentation_multiprocessing.py  _batch_segmentation_multithreading.py  _core_link.py  _core_link_with_napari.py  _engine.py  _engine_1.py  _main_window.py  _real_time_analysis.py  _realtime_cellpose_segmentation.py  _realtime_cellpose_segmentation_old.py  _segment_and_analyse.py  _segment_neurons.py  _sentry.py  _slack_bot.py  _slackbot.py
src/micromanager_gui/_batch_segmentation/: _batch_segmentation_multiprocessing.py  _batch_segmentation_multithreading.py
src/micromanager_gui/_cellpose/: __init__.py
src/micromanager_gui/_mda_viewers/: _napari_viewer.py
src/micromanager_gui/_menubar/: _main_menubar.py  _menubar.py  _segmentation_and_analysis_wdg.py
src/micromanager_gui/_mmcore_engine/: _engine.py
src/micromanager_gui/_plate_viewer/: __init__.py  _analysis.py  _analysis_1.py  _analysis_gui.py  _analysis_new.py  _analysys_extractions1.py  _fov_table.py  _graph_widget.py  _graph_widget_cond.py  _graph_widgets.py  _ideas_on_data_structure.py  _image_viewer.py  _init_dialog.py  _old_plate_model.py  _plate_map.py  _plate_map_graphic_scene.py  _plate_plan_wizard.py  _plate_viewer.py  _plot_comparison.py  _plot_methods.py  _save_as_tiff_widget.py  _save_as_widgets.py  _segmentation.py  _to_csv.py  _to_remove.py  _traces_extraction.py  _util.py  _wells_graphic_scene.py  test.py  trainingImage.py
src/micromanager_gui/_plate_viewer/_logger/: __init__.py  _pw_logger.py
src/micromanager_gui/_plate_viewer/_plot_methods/: __init__.py  _main_plot.py
src/micromanager_gui/_readers/: _ome_zarr_reader.py  _tensorstore_zarr_reader.py
src/micromanager_gui/_slackbot/: _mm_slackbot.py  _slackbot.py  _slackbot_process.py  _slackbot_process_class.py  _slackbot_process_main.py
src/micromanager_gui/_toolbar/: _shutters_toolbar.py
src/micromanager_gui/_widgets/: _console_widget.py  _install_widget.py  _mda_widget.py  _mm_console.py  _preview.py  _snap_live_buttons.py  _stage_control.py
src/micromanager_gui/_widgets/_mda/: _napari_viewer.py
src/micromanager_gui/_widgets/_mda_widget/: __init__.py  _gcamp_delay_widget.py  _mda_widget.py  _real_time_analysis_wdg.py  _realtime_cellpose_segmentation_wdg.py
src/micromanager_gui/_widgets/_writers/: _ome_tiff.py  _tiff_sequence.py
src/micromanager_gui/_writers/: __init__.py  _ome_tiff.py  _ome_zarr.py  _tensorstore_zarr.py  _tensorstore_zarr_old.py  _tiff_sequence.py
src/micromanager_gui/readers/: __init__.py  _ome_zarr_reader.py  _tensorstore_zarr_reader.py  _tensorstore_zarr_reader_old.py
tests/: conftest.py  test_custom_sequence.py  test_engine.py  test_gcamp_widget.py  test_gui.py  test_load_cellpose_models.py  test_mda_viewer.py  test_micromanager_gui.py  test_readers_writers.py
tests/test_plate_viewer/: test_amplitude_frequency_plots.py  test_analysis_equation_parser.py  test_burst_activity.py  test_calcium_network_density.py  test_combined_power_conditions.py  test_correlation_plots.py  test_evoked_experiment_plots.py  test_exposure_time_integration.py  test_graph_widgets.py  test_iei_plots.py  test_inferred_spikes_plots.py  test_init.py  test_init_dialog.py  test_keep_power_conditions.py  test_main_plot.py  test_no_hcs.py  test_percentage_with_n.py  test_plate_viewer_evoked.py  test_plate_viewer_plot_methods.py  test_plate_viewer_spontaneous.py  test_plot_cell_size.py  test_plot_methods.py  test_raster_plots.py  test_rearrange_by_condition.py  test_save_as_widgets.py  test_segmentation.py  test_specific_plot_methods.py  test_spike_analysis_enhancements.py  test_spike_correlation_plots.py  test_spike_raster_plots.py  test_synchrony_plots.py  test_util.py
(+434 files in other folders)
