# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "micromanager-gui"
description = "A Micro-Manager GUI based on pymmcore-widgets and pymmcore-plus."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "federico.gasparoli@gmail.com", name = "Federico Gasparoli" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "oasis-deconv!=0.2.1",
    "cvxpy",  # to not have the warning in oasis-deconv
    "pymmcore-widgets >=0.8.0",
    "pymmcore-plus >=0.13.4",
    "qtpy",
    "vispy",
    "zarr==2.*",
    "tifffile",
    "tqdm",
    "pyyaml",
    "cmap",
    "cellpose<4",
    "pyconify",
    "slack_bolt",
    "python-dotenv",
    "rich",
    "matplotlib",
    "mplcursors",
    "ndv[vispy]==0.0.4",
    "qtconsole",
    "pyfirmata2",
    "scikit-image",
    "PyQt6",
    "tensorstore!=0.1.72",
    "pydantic<2.11.0",
    "pandas"
]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov", "pytest-qt"]
dev = [
    "black",
    "ipython",
    "mypy",
    "pdbpp",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "rich",
    "ruff",
]

[project.urls]
homepage = "https://github.com/fdrgsp/micromanager-gui"
repository = "https://github.com/fdrgsp/micromanager-gui"

# same as console_scripts entry point
[project.scripts]
mmgui = "micromanager_gui.__main__:main"
pv = "micromanager_gui.__main__:plate_viewer"
bcp = "micromanager_gui.__main__:batch_cellpose"


# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",    # style errors
    "F",    # flakes
    "W",    # warnings
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TID",  # tidy
    "TCH",  # typecheck
    # "SLF",  # private-access
]
ignore = [
    "D100", # Missing docstring in public module
    "D401", # First line should be in imperative mood
]
pydocstyle.convention = "numpy"
per-file-ignores."tests/*.py" = ["D", "SLF"]

[tool.ruff.format]
docstring-code-format = true

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = ["error"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true


# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "raise AssertionError",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.coverage.run]
source = ["micromanager_gui"]
omit = ["src/micromanager_gui/_slackbot/*"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
]

[tool.typos.default] 
extend-ignore-identifiers-re = ["(?i)nd2?.*", "(?i)ome"]